--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "@react-navigation/bottom-tabs": "^6.2.0",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
+    "@reduxjs/toolkit": "^1.8.0",
     "axios": "^0.26.0",
     "react": "17.0.2",
     "react-native": "0.67.3",
     "react-native-safe-area-context": "^4.1.2",
-    "react-native-screens": "^3.13.0"
+    "react-native-screens": "^3.13.0",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
