--- a/package.json
+++ b/package.json
@@ -16,6 +16,12 @@
     "@react-navigation/native-stack": "^6.5.0",
     "@reduxjs/toolkit": "^1.8.0",
     "axios": "^0.26.0",
+    "expo": ">=44.0.0-0 <45.0.0",
+    "expo-application": "^4.0.2",
+    "expo-auth-session": "^3.5.0",
+    "expo-modules": "^0.0.0",
+    "expo-modules-core": "^0.6.5",
+    "expo-random": "^12.1.2",
     "react": "17.0.2",
     "react-native": "0.67.3",
     "react-native-safe-area-context": "^4.1.2",
