--- a/ios/parkerefe2/Info.plist
+++ b/ios/parkerefe2/Info.plist
@@ -68,5 +68,9 @@
 				</array>
 			</dict>
 		</array>
+		<key>LSApplicationQueriesSchemes</key>
+		<array>
+			<string>comgooglemaps</string>
+		</array>
 	</dict>
 </plist>
