--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "17.0.2",
     "react-native": "0.67.3",
     "react-native-maps": "0.29.4",
+    "react-native-ratings": "^8.1.0",
     "react-native-safe-area-context": "^4.1.2",
     "react-native-screens": "^3.13.0",
     "react-redux": "^7.2.6",
