[Map] added carpark markers to map, need to fix go back navigation from search

--- a/ios/parkerefe2/Info.plist
+++ b/ios/parkerefe2/Info.plist
@@ -72,5 +72,11 @@
 		<array>
 			<string>comgooglemaps</string>
 		</array>
+		<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+		<string>Allow $(PRODUCT_NAME) to use your location</string>
+		<key>NSLocationAlwaysUsageDescription</key>
+		<string>Allow $(PRODUCT_NAME) to use your location</string>
+		<key>NSLocationWhenInUseUsageDescription</key>
+		<string>Allow $(PRODUCT_NAME) to use your location</string>
 	</dict>
 </plist>
