--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo": ">=44.0.0-0 <45.0.0",
     "expo-application": "^4.0.2",
     "expo-auth-session": "^3.5.0",
+    "expo-location": "~14.0.1",
     "expo-modules": "^0.0.0",
     "expo-modules-core": "^0.6.5",
     "expo-random": "^12.1.2",
