--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "expo-modules": "^0.0.0",
     "expo-modules-core": "^0.6.5",
     "expo-random": "^12.1.2",
+    "jwt-decode": "^3.1.2",
     "react": "17.0.2",
     "react-native": "0.67.3",
     "react-native-maps": "0.29.4",
