--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jwt-decode": "^3.1.2",
     "react": "17.0.2",
     "react-native": "0.67.3",
+    "react-native-map-link": "^2.9.0",
     "react-native-maps": "0.29.4",
     "react-native-ratings": "^8.1.0",
     "react-native-safe-area-context": "^4.1.2",
